--- a/server/auth-service/package.json
+++ b/server/auth-service/package.json
@@ -28,6 +28,7 @@
     "@mikro-orm/reflection": "^5.6.5",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
