--- a/server/restaurant-service/package.json
+++ b/server/restaurant-service/package.json
@@ -21,13 +21,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^9.2.1",
+    "@nestjs/microservices": "^9.3.9",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
-    "ioredis": "^5.3.0",
+    "@nestjs/sequelize": "^9.0.0",
+    "ioredis": "^5.3.1",
+    "joi": "^17.8.3",
+    "mysql2": "^3.1.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.29.0",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -36,6 +45,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-local": "^1.0.35",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
