--- a/http-client-api/package.json
+++ b/http-client-api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.10",
+    "@nestjs/websockets": "^9.3.10",
     "ioredis": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
