--- a/server/user-service/package.json
+++ b/server/user-service/package.json
@@ -20,13 +20,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@mikro-orm/core": "^5.6.5",
-    "@mikro-orm/entity-generator": "^5.6.5",
-    "@mikro-orm/migrations": "^5.6.5",
-    "@mikro-orm/mysql": "^5.6.5",
-    "@mikro-orm/nestjs": "^5.1.6",
-    "@mikro-orm/reflection": "^5.6.5",
-    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -35,15 +28,19 @@
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^9.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.0",
+    "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -55,6 +52,7 @@
     "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
