--- a/server/user-service/package.json
+++ b/server/user-service/package.json
@@ -30,9 +30,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
     "ioredis": "^5.3.0",
+    "joi": "^17.9.1",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
