--- a/server/shared-service/package.json
+++ b/server/shared-service/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^9.3.12",
+    "@nestjs/microservices": "^9.3.12",
     "@types/node": "^18.15.10",
+    "joi": "^17.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
