--- a/server/user-service/package.json
+++ b/server/user-service/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@asarkisyan/nestjs-foodapp-shared": "file:../shared-service",
+    "@asarkisyan/nestjs-foodapp-shared": "^1.0.6",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
