--- a/http-restaurant-api/package.json
+++ b/http-restaurant-api/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@asarkisyan/nestjs-foodapp-shared": "file:../server/shared-service",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.3.9",
