--- a/server/restaurant-service/package.json
+++ b/server/restaurant-service/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@asarkisyan/nestjs-foodapp-shared": "file:../shared-service",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -30,7 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "ioredis": "^5.3.1",
-    "joi": "^17.8.3",
+    "joi": "^17.9.1",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
