--- a/http-client-api/package.json
+++ b/http-client-api/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@asarkisyan/nestjs-foodapp-shared": "^1.0.6",
+    "@asarkisyan/nestjs-foodapp-shared": "file:../server/shared-service",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
