--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.3.0",
-    "postcss": "8.4.21",
+    "next": "12.2.5",
+    "next-auth": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "autoprefixer": "10.4.14",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.2",
+    "typescript": "4.7.4"
   }
 }
