--- a/frontend/client/.env
+++ b/frontend/client/.env
@@ -1,3 +1,3 @@
-# NEXTAUTH_URL=http://localhost:3009/api/auth/signin
-JWT_SECRET=test
-NEXTAUTH_SECRET=gregre
+NEXTAUTH_URL=http://localhost:3009
+NEXTAUTH_SECRET=egreg5g45gh4h4eg54654657h5657^%
+HTTP_CLIENT_API_URL=http://localhost:3001/api/v1/
