FA-12 Adds basic restaurant search using mapquest api endpoints

--- a/services/restaurant-service/.env
+++ b/services/restaurant-service/.env
@@ -6,3 +6,6 @@ DB_PASSWORD=root
 
 JWT_PRIVATE_KEY=jwt_private_key
 JWT_SECRET=jwt_secret
+
+MAP_QUEST_API_URL=https://www.mapquestapi.com/
+MAP_QUEST_API_KEY=
