--- a/frontend/client/.env
+++ b/frontend/client/.env
@@ -1,3 +1,6 @@
 NEXTAUTH_URL=http://localhost:3009
 NEXTAUTH_SECRET=egreg5g45gh4h4eg54654657h5657^%
+NEXT_API_URL=http://localhost:3009/api/
+NEXT_PUBLIC_API_URL=http://localhost:3009/api/
+
 HTTP_CLIENT_API_URL=http://localhost:3001/api/v1/
