--- a/services/restaurant-service/package.json
+++ b/services/restaurant-service/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@asarkisyan/nestjs-foodapp-shared": "file:../shared-service",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -30,6 +31,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
+    "axios": "^1.3.6",
     "ioredis": "^5.3.1",
     "joi": "^17.9.1",
     "mysql2": "^3.1.2",
