FA-13 Adds Next FE for restaurants - basic auth, wrapper for calling the API, tests WS communication b/n client, restaurant and server

--- a/frontend/client/.env
+++ b/frontend/client/.env
@@ -4,3 +4,5 @@ NEXT_API_URL=http://localhost:3009/api/
 NEXT_PUBLIC_API_URL=http://localhost:3009/api/
 
 HTTP_CLIENT_API_URL=http://localhost:3001/api/v1/
+
+NEXT_PUBLIC_WS_URL=http://localhost:3001
