--- a/frontend/restaurant/.env
+++ b/frontend/restaurant/.env
@@ -4,3 +4,5 @@ NEXT_API_URL=http://localhost:3010/api/
 NEXT_PUBLIC_API_URL=http://localhost:3010/api/
 
 HTTP_RESTAURANT_API_URL=http://localhost:3000/api/v1/
+
+NEXT_PUBLIC_WS_URL=http://localhost:3001
