FA-14-cart Shows restaurant products by category; Added Redis instance to store user cart

--- a/services/restaurant-service/.env
+++ b/services/restaurant-service/.env
@@ -8,4 +8,4 @@ JWT_PRIVATE_KEY=jwt_private_key
 JWT_SECRET=jwt_secret
 
 MAP_QUEST_API_URL=https://www.mapquestapi.com/
-MAP_QUEST_API_KEY=
+MAP_QUEST_API_KEY=7tRujQ9SbwXq4EUSt9imErYn7zzxOs1V
