--- a/frontend/client/.env
+++ b/frontend/client/.env
@@ -6,3 +6,7 @@ NEXT_PUBLIC_API_URL=http://localhost:3009/api/
 HTTP_CLIENT_API_URL=http://localhost:3001/api/v1/
 
 NEXT_PUBLIC_WS_URL=http://localhost:3001
+
+REDIS_PORT=
+REDIS_URL=
+REDIS_PASSWORD=
