--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "ioredis": "^5.3.2",
     "next": "12.2.5",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
