--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@asarkisyan/nestjs-foodapp-shared": "^1.0.6",
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -31,6 +32,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^9.0.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.3.1",
+    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^4.1.2",
     "ioredis": "^5.3.0",
     "joi": "^17.9.1",
     "mysql2": "^3.2.0",
