--- a/frontend/client/tsconfig.json
+++ b/frontend/client/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/types/*": ["types/*"],
+      "@/services/*": ["services/*"],
+      "@/pages/*": ["pages/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
